--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "antd": "^3.0.0-beta.1",
     "classnames": "~2.2.5",
     "damo-cntd": "latest",
-    "damo-core": "^0.1.9",
+    "damo-core": "latest",
     "prop-types": "15.6.0",
     "react": "^15.6.0",
     "react-dom": "^15.6.0"
