--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.3",
+  "version": "0.0.4-beta1",
   "name": "damo-boilerplate-console",
   "author": {
     "name": "baqian <st403471258@gmail.com>"
@@ -12,7 +12,7 @@
   ],
   "keywords": [
     "webpack",
-    "beatle"
+    "damo"
   ],
   "description": "Damo样本库 - 管控台项目",
   "homepage": "https://github.com/damo-team/damo-boilerplate-console",
@@ -24,13 +24,19 @@
     "url": "https://github.com/damo-team/damo-boilerplate-console/issues"
   },
   "dependencies": {
-    "antd": "^3.0.0-beta.1",
-    "classnames": "~2.2.5",
     "damo-cntd": "latest",
     "damo-core": "latest",
+    "antd": "^3.0.0-beta.1",
+    "classnames": "~2.2.5",
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
     "prop-types": "15.6.0",
-    "react": "^15.6.0",
-    "react-dom": "^15.6.0"
+    "lodash": "^4.17.4",
+    "mockjs": "^0.1.1",
+    "node-uuid": "~1.4.3",
+    "babylon": "^6.15.0",
+    "json-schema-helper": "0.0.3",
+    "request": "^2.36.0"
   },
   "readmeFilename": "README.md",
   "license": "MIT"
