--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.4-beta1",
+  "version": "0.0.5",
   "name": "damo-boilerplate-console",
   "author": {
     "name": "baqian <st403471258@gmail.com>"
