--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "url": "https://github.com/damo-team/damo-boilerplate-console/issues"
   },
   "dependencies": {
-    "damo-cntd": "latest",
-    "damo-core": "latest",
     "antd": "^3.0.0-beta.1",
+    "babylon": "^6.15.0",
     "classnames": "~2.2.5",
-    "react": "15.4.1",
-    "react-dom": "15.4.1",
-    "prop-types": "15.6.0",
+    "damo-cntd": "latest",
+    "damo-core": "^0.1.14-beta5",
+    "json-schema-helper": "0.0.3",
     "lodash": "^4.17.4",
     "mockjs": "^0.1.1",
     "node-uuid": "~1.4.3",
-    "babylon": "^6.15.0",
-    "json-schema-helper": "0.0.3",
+    "prop-types": "15.6.0",
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
     "request": "^2.36.0"
   },
   "readmeFilename": "README.md",
